--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,8 @@
 <body>
     <div id= "container">
         <div id="cabecera">
-            CABECERA
+            HyperBlog
+            <span id="tagline">Tu blog de confianza</span>
         </div>
         <div id="post">
             <h1>Aqui vamos a hacer un blog post</h1>
