Agregado el contenido adicional del blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,11 @@
         <div id="post">
             <h1>Aqui vamos a hacer un blog post</h1>
             <p>y este es el parrafo de inicio</p>
+            <p>Los blogs son lo mejor forma de compartir información
+                de tus ideas. Mucho mas que ir a conferencia o salir
+                en youtube. Excepto si eres un rockstar. Pero estudiando
+                lo seras.
+            </p>
         </div>
     </div>
 </body>
