--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
     <div id= "container">
         <div id="cabecera">
             HyperBlog
-            <span id="tagline">Tu blog de confianza</span>
+            <span id="tagline">Tu blog MAESTRO</span>
         </div>
         <div id="post">
             <h1>Aqui vamos a hacer un blog post</h1>
@@ -20,6 +20,7 @@
                 en youtube. Excepto si eres un rockstar. Pero estudiando
                 lo seras.
             </p>
+            <p>suscribete y dale like</p>
         </div>
     </div>
 </body>
