--- a/blogpost.html
+++ b/blogpost.html
@@ -22,6 +22,9 @@
             </p>
             <p>suscribete y dale like</p>
         </div>
+        <div id ="footer">
+            Derechos reservados NMC &lt;3
+        </div>
     </div>
 </body>
 </html>
